--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,12 +1,5 @@
 <form [formGroup]="cardForm">
-    <input formControlName="name"/>
-    <ng-container *ngIf="cardForm.controls.name.errors">
-        <div *ngIf="cardForm.controls.name.errors.required">Value is required.</div>
-        <div *ngIf="cardForm.controls.name.errors.minlength">
-            Value you entered is 
-            {{ cardForm.controls.name.errors.minlength.actualLength }}
-            but must be
-            {{ cardForm.controls.name.errors.minlength.requiredLength }}.
-        </div>
-    </ng-container>
+    <!--fromControlName="name" does not give us access to cardform-->
+    <!--passing in entire control object will give us access-->
+    <app-input [control]="cardForm.get('name')"></app-input>
 </form>
