--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,14 +1,29 @@
-<input [formControl]="control"/>
-    <ng-container *ngIf=
-        "control.dirty && 
-        control.touched && 
-        control.errors"
-    >
-        <div *ngIf="control.errors.required">Value is required.</div>
-        <div *ngIf="control.errors.minlength">
+<div class="field">
+    <label class="label">{{ label }}</label>
+    <div class="control">
+        <input 
+            class="input" 
+            [formControl]="control"
+            [ngClass]="{ 'is-danger': showErrors() }"
+        />
+    </div>
+
+        <ng-container *ngIf="showErrors()">
+        <div class="help is-danger" *ngIf="control.errors.required">Value is required.</div>
+        <div class="help is-danger" *ngIf="control.errors.minlength">
             Value you entered is 
             {{ control.errors.minlength.actualLength }}
             but must be
             {{ control.errors.minlength.requiredLength }}.
         </div>
-</ng-container>
+        <div class="help is-danger" *ngIf="control.errors.maxlength">
+            Value you entered is 
+            {{ control.errors.maxlength.actualLength }}
+            characters long, but cannot be longer than
+            {{ control.errors.maxlength.requiredLength }}
+        </div>
+        <div *ngIf="control.errors.pattern">
+            Invalid pattern
+        </div>
+    </ng-container>
+</div>
