--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,9 +1,30 @@
-<form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
-    <!--fromControlName="name" does not give us access to cardform-->
-    <!--passing in entire control object will give us access-->
-    <app-input label="Name" [control]="cardForm.get('name')"></app-input>
-    <app-input label="Card Number" [control]="cardForm.get('cardNumber')"></app-input>
-    <app-input label="Expiration" [control]="cardForm.get('expiration')"></app-input>
-    <app-input label="Security Code" [control]="cardForm.get('securityCode')"></app-input>
-    <button class="button is-primary" type="submit" [disabled]="cardForm.invalid">Submit</button>
-</form>
+<div class="columns">
+    <div class="column">
+        <app-card 
+        [name]="cardForm.controls.name.value" 
+        [cardNumber]="cardForm.controls.cardNumber.value"
+        [expiration]="cardForm.controls.expiration.value"
+        ></app-card>
+    </div>
+    <div class="column">
+        <form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
+            <!--fromControlName="name" does not give us access to cardform-->
+            <!--passing in entire control object will give us access-->
+            <app-input label="Name" [control]="cardForm.get('name')"></app-input>
+            <app-input label="Card Number" [control]="cardForm.get('cardNumber')"></app-input>
+            <div class="columns">
+                <div class="column">
+                    <app-input label="Expiration" [control]="cardForm.get('expiration')"></app-input>
+                </div>
+                <div class="column">
+                    <app-input label="Security Code" [control]="cardForm.get('securityCode')"></app-input>
+                </div>
+            </div>
+
+            <div class="buttons">
+                <button class="button is-primary" type="submit" [disabled]="cardForm.invalid">Submit</button>
+                <button class="button is-warning" type="button" (click)="onResetClick">Reset</button>
+            </div>
+        </form>
+    </div>
+</div>
